# BookStorage

./: .gitignore  pyproject.toml
src/: config.py  main.py  providers.py
src/core/domain/: book.py
src/core/dto/: book_dto.py
src/core/ports/: base_session.py  repository.py
src/core/ports/database/: database.py  operation.py  transaction.py  wal.py
src/core/ports/repository/: repository.py  uow.py
src/core/service/: book_service.py
src/core/usecase/: __init__.py  add_book.py  delete_book.py  get_book.py  set_status.py
src/infrastructure/: book_repository.py  cli_adapter.py  json_database.py  util.py
src/infrastructure/database/: json_database.py  operation.py  transaction.py  write_ahead_logger.py
test/infrastructure/database/: test_json_database.py  test_operation.py  test_transaction.py  test_wal.py
test_data/: database_data.json  test.json
